--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-sound": "^1.2.0",
     "react-typing-effect": "^2.0.3"
   },
   "scripts": {
